// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays an image 1`] = `
<Link
  data-stylename="link"
  replace={false}
  to="/all/p/77"
>
  <div
    data-stylename="comment-card"
  >
    <div
      data-stylename="comment-header"
    >
      <RoundImage
        large={true}
        url="foo.jpg"
      />
      <Highlight
        component="span"
        highlightClassName="highlight"
        term="foo"
      >
        <div
          data-stylename="comment-meta"
        >
          <span
            data-stylename="person-name"
          >
            Joe Smith
          </span>
           commented on 
          <span
            data-stylename="post-title"
          >
            Awesome Sauce #hashtag
          </span>
        </div>
      </Highlight>
      <span
        data-stylename="date"
      >
        just now
      </span>
    </div>
    <img
      data-stylename="comment-image"
      onClick={[Function]}
      src="jam.png"
    />
    <div
      data-stylename="comment-footer"
    />
  </div>
</Link>
`;

exports[`matches last snapshot 1`] = `
<Link
  data-stylename="link"
  replace={false}
  to="/all/p/77"
>
  <div
    data-stylename="comment-card"
  >
    <div
      data-stylename="comment-header"
    >
      <RoundImage
        large={true}
        url="foo.jpg"
      />
      <Highlight
        component="span"
        highlightClassName="highlight"
        term="foo"
      >
        <div
          data-stylename="comment-meta"
        >
          <span
            data-stylename="person-name"
          >
            Joe Smith
          </span>
           commented on 
          <span
            data-stylename="post-title"
          >
            Awesome Sauce #hashtag
          </span>
        </div>
      </Highlight>
      <span
        data-stylename="date"
      >
        just now
      </span>
    </div>
    <Connect(ClickCatcher)>
      <Highlight
        component="span"
        highlightClassName="highlight"
        term="foo"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>text of the comment. a long one. text of the comment. a long one. text of the comment. a long one. text of the comment. a long one. text of the …</p>",
            }
          }
          data-stylename="comment-body"
        />
      </Highlight>
    </Connect(ClickCatcher)>
    <div
      data-stylename="comment-footer"
    />
  </div>
</Link>
`;

exports[`matches last snapshot with different config 1`] = `
<Link
  data-stylename="link"
  replace={false}
  to="/all/p/77"
>
  <div
    data-stylename="comment-card expanded"
  >
    <div
      data-stylename="comment-header"
    >
      <RoundImage
        large={true}
        url="foo.jpg"
      />
      <Highlight
        component="span"
        highlightClassName="highlight"
        term="foo"
      >
        <div
          data-stylename="comment-meta"
        >
          <span
            data-stylename="person-name"
          >
            Joe Smith
          </span>
           commented on 
          <span
            data-stylename="post-title"
          >
            Awesome Sauce #hashtag
          </span>
        </div>
      </Highlight>
      <span
        data-stylename="date"
      >
        just now
      </span>
    </div>
    <Connect(ClickCatcher)>
      <Highlight
        component="span"
        highlightClassName="highlight"
        term="foo"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>text of the comment. a long one. text of the comment. a long one. text of the comment. a long one. text of the comment. a long one. text of the comment. a long one. text of the comment. a long one. Irrelevant Change</p>",
            }
          }
          data-stylename="comment-body"
        />
      </Highlight>
    </Connect(ClickCatcher)>
    <div
      data-stylename="comment-footer"
    >
      <span>
        <Icon
          data-stylename="reply-button"
          green={true}
          name="Reply"
        />
         Reply
      </span>
    </div>
  </div>
</Link>
`;
